--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "drizzle-orm": "^0.41.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
+    "next-themes": "^0.4.6",
     "pg": "^8.14.1",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
