--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "drizzle-orm": "^0.41.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
+    "nanoid": "^5.1.5",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "pg": "^8.14.1",
