--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-table": "^8.21.2",
+    "@vercel/mcp-adapter": "^0.5.0",
     "ai": "^4.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
