--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "d3": "^7.9.0",
+    "d3-delaunay": "^6.0.4",
+    "d3-voronoi-map": "^2.1.1",
+    "d3-voronoi-treemap": "^1.1.2",
+    "d3-weighted-voronoi": "^1.1.3",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
     "framer-motion": "^12.6.3",
