--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./db_build/_scripts/init_postgres.sh:/docker-entrypoint-initdb.d/01-init.sh
+    ports:
+      - "5432:5432"  # Expose PostgreSQL on port 543
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
