--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: omnipath  # Create omnipath database on init
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - omnipath-next-postgres-data:/var/lib/postgresql/data
       - ./db_build/_scripts/init_postgres.sh:/docker-entrypoint-initdb.d/01-init.sh
     ports:
       - "5432:5432"  # Expose PostgreSQL on port 543
@@ -41,6 +41,5 @@ services:
       - omnipath-next-postgres
 
 volumes:
-  postgres_data:
-    name: omnipath-postgres-data
+  omnipath-next-postgres-data:
     external: true
