added additional information from descriptions.py

--- a/src/data/resources/AlzPathway.yaml
+++ b/src/data/resources/AlzPathway.yaml
@@ -4,3 +4,31 @@ license:
   full_name: Creative Commons Attribution 3.0 International
   attribution: attrib
   url: https://creativecommons.org/licenses/by/3.0/
+urls:
+  articles:
+  - http://www.biomedcentral.com/1752-0509/6/52
+  - http://onlinelibrary.wiley.com/doi/10.1038/clpt.2013.37/epdf
+  - http://link.springer.com/protocol/10.1007%2F978-1-4939-2627-5_25
+  webpages:
+  - http://alzpathway.org/AlzPathway.html
+pubmeds:
+- 23511713
+- 22647208
+emails:
+- - ogishima@sysmedbio.org
+  - Soichi Ogishima
+- - info@alzpathway.org
+  - Soichi Ogishima
+descriptions:
+- 'We collected 123 review articles related to AD accessible from PubMed. We then
+  manually curated these review articles, and have built an AD pathway map by using
+  CellDesigner. Molecules are distinguished by the following types: proteins, complexes,
+  simple molecules, genes, RNAs, ions, degraded products, and phenotypes. Gene symbols
+  are pursuant to the HGNC symbols. Reactions are also distinguished by the following
+  categories: state transition, transcription, translation, heterodimer association,
+  dissociation, transport, unknown transition, and omitted transition. All the reactions
+  have evidences to the references in PubMed ID using the MIRIAM scheme. All the references
+  used for constructing the AlzPathway are listed in the ‘References for AlzPathway’.
+  Cellular types are distinguished by the followings: neuron, astrocyte, and microglial
+  cells. Cellular compartments are also distinguished by the followings: brain blood
+  barrier, presynaptic, postsynaptic, and their inner cellular localizations.'
