--- a/src/data/resources/Compleat.yaml
+++ b/src/data/resources/Compleat.yaml
@@ -1,4 +1,4 @@
-name: COMPLEAT
+name: Compleat
 license:
   name: CC BY-SA 4.0
   full_name: Creative Commons Attribution-ShareAlike 4.0 International
