--- a/src/data/resources/LRdb.yaml
+++ b/src/data/resources/LRdb.yaml
@@ -4,3 +4,6 @@ license:
   full_name: GNU General Public License version 3
   attribution: attrib
   url: https://www.gnu.org/licenses/gpl-3.0.html
+emails:
+- - jacques.colinge@inserm.fr
+  - Jacques Colinge
