--- a/src/data/resources/Laudanna.yaml
+++ b/src/data/resources/Laudanna.yaml
@@ -4,3 +4,9 @@ license:
   full_name: Creative Commons Attribution 4.0 International
   attribution: attrib
   url: https://creativecommons.org/licenses/by/4.0/
+urls:
+  webpages:
+  - http://dp.univr.it/~laudanna/LCTST/downloads/
+emails:
+- - giovanni.scardoni@gmail.com
+  - Giovanni Scardoni
