--- a/src/data/resources/MINT.yaml
+++ b/src/data/resources/MINT.yaml
@@ -4,3 +4,11 @@ license:
   full_name: Creative Commons Attribution 4.0 International
   attribution: attrib
   url: https://creativecommons.org/licenses/by/4.0/
+urls:
+  articles:
+  - http://www.ncbi.nlm.nih.gov/pmc/articles/PMC1751541/
+  webpages:
+  - http://mint.bio.uniroma2.it/mint/Welcome.do
+emails:
+- - livia.perfetto@live.it
+  - Livia Perfetto
