--- a/src/data/resources/MSigDB.yaml
+++ b/src/data/resources/MSigDB.yaml
@@ -4,3 +4,6 @@ license:
   full_name: Creative Commons Attribution 4.0 International
   attribution: attrib
   url: https://creativecommons.org/licenses/by/4.0/
+emails:
+- - gsea-team@broadinstitute.org
+  - GSEA Team
