--- a/src/data/resources/lncRNADisease.yaml
+++ b/src/data/resources/lncRNADisease.yaml
@@ -1,4 +1,4 @@
-name: LncRNADisease
+name: lncRNADisease
 license:
   name: CC BY-NC 4.0
   full_name: Creative Commons Attribution-NonCommercial 4.0 International
