--- a/src/data/resources/miR2Disease.yaml
+++ b/src/data/resources/miR2Disease.yaml
@@ -1,4 +1,4 @@
-name: miR2Disease
+name: mir2Disease
 license:
   name: CC BY-NC 2.0
   full_name: Creative Commons Attribution-NonCommercial 2.0 International
