--- a/src/data/resources/CARFMAP.yaml
+++ b/src/data/resources/CARFMAP.yaml
@@ -4,3 +4,15 @@ license:
   full_name: Creative Commons Attribution 4.0 International
   attribution: attrib
   url: https://creativecommons.org/licenses/by/4.0/
+urls:
+  articles:
+  - http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0143274
+  webpages:
+  - http://visionet.erc.monash.edu.au/CARFMAP/
+pubmeds:
+- 26673252
+emails:
+- - hieu.nim@monash.edu
+  - Hieu T Nim
+- - sarah.boyd@monash.edu
+  - Sarah E Boyd
