--- a/src/data/resources/PhosphoSite.yaml
+++ b/src/data/resources/PhosphoSite.yaml
@@ -4,3 +4,38 @@ license:
   full_name: Creative Commons Attribution-NonCommercial-ShareAlike 3.0 International
   attribution: attrib
   url: https://creativecommons.org/licenses/by-nc-sa/3.0/
+urls:
+  articles:
+  - http://onlinelibrary.wiley.com/doi/10.1002/pmic.200300772/abstract
+  - http://nar.oxfordjournals.org/content/40/D1/D261.long
+  - http://nar.oxfordjournals.org/content/43/D1/D512.long
+  webpages:
+  - http://www.phosphosite.org/homeAction.do
+pubmeds:
+- 15174125
+- 22135298
+- 25514926
+emails:
+- - phornbeck@cellsignal.com
+  - Peter V Hornbeck
+- - EditorPhosphoSite@cellsignal.com
+  - PhosphoSite Team
+recommend: the largest kinase-substrate database; huge amount of literature referenced
+descriptions:
+- 'PSP integrates both low- and high-throughput (LTP and HTP) data sources into a
+  single reliable and comprehensive resource. Nearly 10,000 journal articles , including
+  both LTP and HTP reports, have been manually curated by expert scientists from over
+  480 different journals since 2001. Information from nearly 13 000 papers and 600
+  different journals characterizing modification sites with LTP methods has been curated
+  into PSP. Information is gathered from published literature and other sources. Published
+  literature is searched semi-automatically with multiple intelligent search algorithms
+  to identify reports that potentially identify phosphorylation sites in human, mouse
+  or other species. Each identified report is then scanned by our highly trained curatorial
+  staff (all with PhDs and extensive research experience in cell biology or related
+  disciplines) to select only those papers that either identify new physiological
+  phosphorylation sites or those that illuminate the biological function of the phosphorylation
+  event. Records that are selected for inclusion into PhosphoSite are placed in the
+  curatorial queue for processing. Note: while we gather records that describe both
+  in vitro and in vivo phosphorylation events, we only finally submit records about
+  in vitro sites when we have additional hard evidence that the site is also phosphorylated
+  in vivo.'
