--- a/src/data/resources/TLR.yaml
+++ b/src/data/resources/TLR.yaml
@@ -4,3 +4,6 @@ license:
   full_name: No license
   attribution: attrib
   url: http://www.gnu.org/licenses/license-list.html#NoLicense
+urls:
+  articles:
+  - https://www.embopress.org/doi/10.1038/msb4100057
