--- a/src/data/resources/WikiPathways.yaml
+++ b/src/data/resources/WikiPathways.yaml
@@ -4,3 +4,19 @@ license:
   full_name: Creative Commons Attribution 3.0 International
   attribution: attrib
   url: https://creativecommons.org/licenses/by/3.0/
+urls:
+  articles:
+  - http://nar.oxfordjournals.org/content/40/D1/D1301
+  webpages:
+  - http://www.wikipathways.org/index.php/WikiPathways
+emails:
+- - thomaskelder@gmail.com
+  - Thomas Kelder
+- - apico@gladstone.ucsf.edu
+  - Alex Pico
+recommend: process description resource developed in a community effort; high proportion
+  of specific proteins
+descriptions:
+- The goal of WikiPathways is to capture knowledge about biological pathways (the
+  elements, their interactions and layout) in a form that is both human readable and
+  amenable to computational analysis.
