--- a/src/data/resources/miRDeathDB.yaml
+++ b/src/data/resources/miRDeathDB.yaml
@@ -1,4 +1,4 @@
-name: miRDeathDB
+name: miRDeatdhDB
 license:
   name: CC BY-NC 4.0
   full_name: Creative Commons Attribution-NonCommercial 4.0 International
