--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "db:stats": "tsx scripts/generate-db-stats.ts"
   },
   "dependencies": {
-    "@ai-sdk/google": "^1.2.11",
+    "@ai-sdk/google": "^2.0.11",
     "@ai-sdk/groq": "^1.2.7",
+    "@ai-sdk/react": "^2.0.29",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.4",
@@ -32,7 +33,7 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-table": "^8.21.2",
     "@vercel/mcp-adapter": "^0.5.0",
-    "ai": "^4.3.4",
+    "ai": "^5.0.29",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -58,7 +59,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
-    "zod": "^3.24.2",
+    "zod": "^4.1.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
