--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "recharts": "^3.1.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.3",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "zod": "^4.1.5",
