--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "nanoid": "^5.1.5",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "openchemlib": "^9.8.0",
     "pg": "^8.14.1",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "react-ocl": "^8.2.0",
     "recharts": "^3.1.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.3",
