--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,8 @@ services:
         # Pass database URLs for build time (from .env file)
         DATABASE_URL_PROD: ${DATABASE_URL_PROD}
         DATABASE_URL_DEV: ${DATABASE_URL_DEV}
+    ports:
+      - "3000:3000"  # Expose Next.js app on port
     restart: unless-stopped
     environment:
       NODE_ENV: production
