--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-table": "^8.21.2",
-    "@vercel/mcp-adapter": "^0.5.0",
+    "@vercel/mcp-adapter": "^1.0.0",
     "ai": "^5.0.29",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,7 +48,7 @@
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
     "nanoid": "^5.1.5",
-    "next": "15.5.2",
+    "next": "^15.5.9",
     "next-themes": "^0.4.6",
     "pg": "^8.14.1",
     "postgres": "^3.4.5",
@@ -61,7 +61,7 @@
     "swr": "^2.3.6",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
-    "zod": "^4.1.5",
+    "zod": "^3.23.8",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -72,7 +72,7 @@
     "@types/pg": "^8.11.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.30.6",
+    "drizzle-kit": "^0.18.1",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4",
